--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+#app{
+    font-size: 60px;
+    letter-spacing:1px;
+    border-top:20px solid #000;
+    border-right:20px solid #000;
+    border-left:20px solid #000;
+}
 .zx-1 {
     background-color: #000;
     color: #f2f1ed;
@@ -127,7 +134,7 @@ html {
     padding: 0
 }
 
-#app {
+.app {
     font-size: 60px;
     letter-spacing: 1px;
     border-top: 20px solid #000;
