--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-#app{
+#app {
     font-size: 60px;
-    letter-spacing:1px;
-    border-top:20px solid #000;
-    border-right:20px solid #000;
-    border-left:20px solid #000;
+    letter-spacing: 1px;
+    border-top: 20px solid #000;
+    border-right: 20px solid #000;
+    border-left: 20px solid #000;
 }
+
 .zx-1 {
     background-color: #000;
     color: #f2f1ed;
@@ -176,6 +177,26 @@ html {
 .footer p {
     margin: 0;
     cursor: pointer
+}
+
+.heart {
+    fill: red;
+    width: 12px;
+    animation: pulse 1s ease infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.3);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 @media only screen and (max-device-width: 321px) {
